[gd_scene load_steps=16 format=3 uid="uid://cn66f1khhhdm"]

[ext_resource type="Script" uid="uid://4tqj5yxkmtcm" path="res://scripts/MainMenu.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://cyakxgjt37sdk" path="res://assets/art/background.png" id="2_826wr"]
[ext_resource type="FontFile" uid="uid://b8k2y7j3a1b2c" path="res://theme/ka1_font.tres" id="3_font"]
[ext_resource type="Texture2D" uid="uid://betoli3gya3av" path="res://assets/art/player_spritesheet.png" id="4_spritesheet"]
[ext_resource type="AudioStream" uid="uid://dqlaplkolnkb0" path="res://assets/sound/button.mp3" id="5_sound"]
[ext_resource type="AudioStream" uid="uid://bo8sgy082xxed" path="res://assets/sound/bg_music.mp3" id="6_music"]

[sub_resource type="Animation" id="Animation_float"]
resource_name = "float"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CenterContainer/VBoxContainer/TitleLabel:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -10)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_title"]
_data = {
&"float": SubResource("Animation_float")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_blink_1"]
atlas = ExtResource("4_spritesheet")
region = Rect2(256, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blink_2"]
atlas = ExtResource("4_spritesheet")
region = Rect2(320, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blink_3"]
atlas = ExtResource("4_spritesheet")
region = Rect2(384, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_blink_4"]
atlas = ExtResource("4_spritesheet")
region = Rect2(448, 256, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_portrait"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_blink_1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blink_2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blink_3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_blink_4")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}]

[sub_resource type="Theme" id="Theme_main_menu"]
default_font = ExtResource("3_font")
default_font_size = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0, 0, 0, 0.7)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_826wr")
expand_mode = 1
stretch_mode = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_title")
}
autoplay = "float"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 84
text = "Quantum Maze"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CenterContainer/VBoxContainer/HBoxContainer"]
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_portrait")
animation = &"blink"
autoplay = "blink"
frame_progress = 0.65

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
theme = SubResource("Theme_main_menu")
text = " Play "

[node name="SettingsButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
theme = SubResource("Theme_main_menu")
text = " Settings "

[node name="CreditsButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
theme = SubResource("Theme_main_menu")
text = " Credits "

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer/MenuButtons"]
layout_mode = 2
theme = SubResource("Theme_main_menu")
text = " Quit "

[node name="CreditsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="CenterContainer" type="CenterContainer" parent="CreditsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="CreditsLabel" type="Label" parent="CreditsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 64
text = "Credits"
horizontal_alignment = 1

[node name="CreditsText" type="RichTextLabel" parent="CreditsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]@Squid2010, Harvester of Skin (Sumer Chaudhary)
@narenkarthikx (Naren Karthik)
@Nikhil (Nikhil Nair)
@BlackMamba_o8 (Arnav Argankar)[/center]"
fit_content = true

[node name="BackButton" type="Button" parent="CreditsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_main_menu")
text = " Back "

[node name="SettingsPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="CenterContainer" type="CenterContainer" parent="SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="SettingsLabel" type="Label" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 64
text = "Settings"
horizontal_alignment = 1

[node name="MusicControl" type="VBoxContainer" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MusicLabel" type="Label" parent="SettingsPanel/CenterContainer/VBoxContainer/MusicControl"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_font")
theme_override_font_sizes/font_size = 24
text = "Music Volume"
horizontal_alignment = 1

[node name="MusicSlider" type="HSlider" parent="SettingsPanel/CenterContainer/VBoxContainer/MusicControl"]
layout_mode = 2
min_value = -40.0
max_value = 0.0
step = 2.0

[node name="BackButton" type="Button" parent="SettingsPanel/CenterContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_main_menu")
text = " Back "

[node name="ButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_sound")
bus = &"SFX"

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("6_music")
autoplay = true
bus = &"Music"
